--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -5,11 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".SignIn_Activity"
-    android:orientation="vertical"
+    android:orientation="vertical">
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:paddingVertical="36dp"
     android:paddingHorizontal="24dp"
-    android:background="@color/white">
-
+    android:background="@color/white"
+    android:orientation="vertical">
     <TextView
         android:id="@+id/textView2"
         android:layout_width="match_parent"
@@ -37,7 +40,16 @@
         android:textColor="@color/black"
         android:textSize="16dp"
         android:textStyle="bold" />
-
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/layout_si_ed_em"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:endIconTint="@color/main_purple"
+        android:hint="Enter your email"
+        android:textColorHint="@color/grey_font"
+        app:errorEnabled="true"
+        app:helperTextEnabled="true"
+        >
     <EditText
         android:id="@+id/edEmail"
         android:layout_width="match_parent"
@@ -46,11 +58,14 @@
         android:ems="10"
         android:textSize="16dp"
         android:inputType="textEmailAddress"
-        android:hint="Enter your email or your phone number"
         android:background="@drawable/edittext_border"
         android:paddingHorizontal="12dp"
-        android:layout_marginBottom="8dp"/>
+        android:layout_marginBottom="8dp"
+        android:drawableStart="@drawable/baseline_contact_mail_24"
+        android:drawablePadding="6dp"
 
+        />
+    </com.google.android.material.textfield.TextInputLayout>
     <TextView
         android:id="@+id/textView9"
         android:layout_width="match_parent"
@@ -60,41 +75,68 @@
         android:textColor="@color/black"
         android:textSize="16dp"
         android:textStyle="bold" />
-
-    <EditText
-        android:id="@+id/edPassword"
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/layout_si_ed_pass"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:ems="10"
-        android:textSize="16dp"
-        android:inputType="text"
-        android:hint="Create your password"
-        android:background="@drawable/edittext_border"
-        android:paddingHorizontal="12dp"
-        android:layout_marginBottom="8dp"/>
+        app:endIconMode="password_toggle"
+        app:endIconTint="@color/main_purple"
+        android:hint="Enter your password"
+        android:textColorHint="@color/grey_font"
+        app:errorEnabled="true"
+        app:helperTextEnabled="true"
+        >
 
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/edPassword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:ems="10"
+            android:textSize="16dp"
+            android:inputType="textPassword"
+            android:typeface="normal"
+            android:background="@drawable/edittext_border"
+            android:paddingHorizontal="12dp"
+            android:layout_marginBottom="8dp"
+            android:drawableStart="@drawable/baseline_lock_24"
+            android:drawablePadding="4dp"
+
+            />
+    </com.google.android.material.textfield.TextInputLayout>
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/forgotPass"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="0.5"
         android:text="Forgot Password?"
+        android:textAlignment="viewEnd"
         android:textColor="@color/main_purple"
-        android:textSize="16dp"
-        android:textAlignment="viewEnd"/>
-
-    <Button
-        android:id="@+id/btSignIn"
+        android:textSize="16dp" />
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="19dp"
-        android:layout_marginVertical="12dp"
-        android:layout_weight="1"
-        android:background="@drawable/btn_border"
-        android:text="Sign In"
-        android:textColor="@color/white"
-        android:textSize="16dp"
-        android:textAllCaps="false" />
+        android:layout_height="wrap_content">
+
+        <ProgressBar
+            android:id="@+id/prbSI"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:visibility="invisible">
+
+        </ProgressBar>
+
+        <Button
+            android:id="@+id/btSignIn"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginVertical="12dp"
+            android:layout_weight="1"
+            android:background="@drawable/btn_border"
+            android:text="Sign In"
+            android:textColor="@color/white"
+            android:textSize="16dp"
+            android:textAllCaps="false" />
+    </FrameLayout>
 
     <TextView
         android:id="@+id/textView10"
@@ -103,43 +145,38 @@
         android:layout_margin="0dp"
         android:layout_weight="0.5"
         android:padding="0dp"
-        android:text="or using other method"
+        android:text="or"
         android:textAlignment="center"
         android:textSize="16dp"
          />
-
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/button2"
+<FrameLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+    <ProgressBar
+        android:id="@+id/prbGG"
         android:layout_width="match_parent"
-        android:layout_height="18dp"
-        android:layout_weight="1"
-        android:background="@drawable/btn_rounded_gg_fb"
-        android:text="Sign In with Google"
-        android:textColor="@color/black"
-        android:textSize="16dp"
-        android:layout_marginVertical="8dp"
-        android:textAllCaps="false"
-        android:textAlignment="center"
-        android:gravity="center"
-        />
+        android:layout_height="70dp"
+        android:visibility="invisible">
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/button3"
+    </ProgressBar>
+    <ImageButton
+        android:id="@+id/btSIGG"
         android:layout_width="match_parent"
-        android:layout_height="20dp"
+        android:layout_height="70dp"
         android:layout_weight="1"
-        android:text="Sign In with Facebook"
-        android:background="@drawable/btn_rounded_gg_fb"
-        android:textColor="@color/black"
-        android:textSize="16dp"
-        android:textAllCaps="false"
-        android:textAlignment="center"
-        android:gravity="center"
-        />
+
+        app:srcCompat="@drawable/common_google_signin_btn_icon_light" />
+    </FrameLayout>
+
+
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_weight="2">
+        android:layout_weight="3">
 
     </View>
+
+
+</LinearLayout>
+
 </LinearLayout>
