--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -36,19 +36,32 @@
         android:textColor="@color/black"
         android:textSize="16dp"
         android:textStyle="bold" />
-
-    <EditText
-        android:id="@+id/edUsername"
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/layout_su_ed_un"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:ems="10"
-        android:textSize="16dp"
-        android:inputType="text"
+        app:endIconTint="@color/main_purple"
         android:hint="Create your username"
-        android:background="@drawable/edittext_border"
-        android:paddingHorizontal="12dp"
-        android:layout_marginBottom="8dp"/>
+        android:textColorHint="@color/grey_font"
+        android:layout_marginBottom="12dp"
+        app:errorEnabled="true"
+        app:helperTextEnabled="true"
+        >
+        <EditText
+            android:id="@+id/edUsername"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:ems="10"
+            android:textSize="16dp"
+            android:inputType="text"
+            android:background="@drawable/edittext_border"
+            android:paddingHorizontal="12dp"
+            android:layout_marginBottom="8dp"
+            android:drawableStart="@drawable/baseline_account_circle_24"
+            android:drawablePadding="4dp"/>
+    </com.google.android.material.textfield.TextInputLayout>
+
 
     <TextView
         android:id="@+id/textView8"
@@ -59,19 +72,33 @@
         android:textColor="@color/black"
         android:textSize="16dp"
         android:textStyle="bold" />
-
-    <EditText
-        android:id="@+id/edEmail"
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/layout_su_ed_em"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:ems="10"
-        android:textSize="16dp"
-        android:inputType="textEmailAddress"
+        app:endIconTint="@color/main_purple"
         android:hint="Enter your email"
-        android:background="@drawable/edittext_border"
-        android:paddingHorizontal="12dp"
-        android:layout_marginBottom="8dp"/>
+        android:textColorHint="@color/grey_font"
+        app:errorEnabled="true"
+        app:helperTextEnabled="true"
+        >
+        <EditText
+            android:id="@+id/edEmail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:ems="10"
+            android:textSize="16dp"
+            android:inputType="textEmailAddress"
+            android:background="@drawable/edittext_border"
+            android:paddingHorizontal="12dp"
+            android:layout_marginBottom="8dp"
+            android:drawableStart="@drawable/baseline_contact_mail_24"
+            android:drawablePadding="6dp"
+
+            />
+    </com.google.android.material.textfield.TextInputLayout>
+
 
     <TextView
         android:id="@+id/textView9"
@@ -83,24 +110,51 @@
         android:textSize="16dp"
         android:textStyle="bold" />
 
-    <EditText
-        android:id="@+id/edPassword"
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/layout_su_ed_pass"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:ems="10"
-        android:textSize="16dp"
-        android:inputType="textPassword"
-        android:hint="Create your password"
-        android:fontFamily="sans-serif"
-        android:background="@drawable/edittext_border"
-        android:paddingHorizontal="12dp"
-        android:layout_marginBottom="8dp"/>
+        app:endIconMode="password_toggle"
+        app:endIconTint="@color/main_purple"
+        android:hint="Enter your password"
+        android:textColorHint="@color/grey_font"
+        app:errorEnabled="true"
+        app:helperTextEnabled="true"
+        >
 
-    <Button
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/edPassword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:ems="10"
+            android:textSize="16dp"
+            android:inputType="textPassword"
+            android:background="@drawable/edittext_border"
+            android:paddingHorizontal="12dp"
+            android:layout_marginBottom="8dp"
+            android:drawableStart="@drawable/baseline_lock_24"
+            android:drawablePadding="4dp"
+
+            />
+    </com.google.android.material.textfield.TextInputLayout>
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <ProgressBar
+            android:id="@+id/prbSU"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginVertical="12dp"
+            android:visibility="invisible"
+            >
+
+        </ProgressBar>
+        <Button
         android:id="@+id/btSignUp"
         android:layout_width="match_parent"
-        android:layout_height="19dp"
+        android:layout_height="50dp"
         android:layout_marginVertical="12dp"
         android:layout_weight="1"
         android:background="@drawable/btn_border"
@@ -108,50 +162,13 @@
         android:textColor="@color/white"
         android:textSize="16dp"
         android:textAllCaps="false" />
+    </FrameLayout>
 
-    <TextView
-        android:id="@+id/textView10"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_margin="0dp"
-        android:layout_weight="0.5"
-        android:padding="0dp"
-        android:text="or using other method"
-        android:textAlignment="center"
-        android:textSize="16dp"
-        />
-
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/button2"
-        android:layout_width="match_parent"
-        android:layout_height="18dp"
-        android:layout_weight="1"
-        android:background="@drawable/btn_rounded_gg_fb"
-        android:text="Sign In with Google"
-        android:textColor="@color/black"
-        android:textSize="16dp"
-        android:layout_marginVertical="8dp"
-        android:textAllCaps="false"
-        android:textAlignment="center"
-        android:gravity="center"
-        />
-
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/button3"
-        android:layout_width="match_parent"
-        android:layout_height="20dp"
-        android:layout_weight="1"
-        android:text="Sign In with Facebook"
-        android:background="@drawable/btn_rounded_gg_fb"
-        android:textColor="@color/black"
-        android:textSize="16dp"
-        android:textAllCaps="false"
-        android:textAlignment="center"
-        android:gravity="center"
-        />
     <View
         android:layout_width="match_parent"
-        android:layout_height="3dp">
+        android:layout_height="3dp"
+        android:layout_weight="4"
+        >
 
     </View>
 </LinearLayout>
