--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -7,7 +7,7 @@
     tools:context=".UserActivity">
 
     <FrameLayout
-        android:id="@+id/fragmentuser_container"
+        android:id="@+id/user_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@id/bottom_navigation_view" />
@@ -18,6 +18,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:menu="@menu/bottom_nav_menu"
-        android:layout_alignParentBottom="true" />
+        android:layout_alignParentBottom="true"
+        app:labelVisibilityMode="labeled"
+        />
 
 </RelativeLayout>
