--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="main_purple">#514eb7</color>
     <color name="border_ggfb">#fefefe</color>
+    <color name="grey">#F3F3F3</color>
+
 </resources>
