--- a/app/src/main/res/layout/fragment_home_user.xml
+++ b/app/src/main/res/layout/fragment_home_user.xml
@@ -1,14 +1,83 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFFFFF"
+    android:orientation="horizontal"
     tools:context=".HomeUser">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <ImageView
+        android:id="@+id/avatar"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="20dp"
+        android:scaleType="center"
+        android:src="@drawable/baseline_account_circle_24" />
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/greeting"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="65dp"
+            android:layout_marginTop="25dp"
+            android:text="Hi, Jonathan"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/subtitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/greeting"
+            android:layout_marginLeft="65dp"
+            android:layout_marginTop="5dp"
+            android:text="Let’s go shopping" />
+
+    </LinearLayout>
+
+    <ImageButton
+        android:id="@+id/imgSearch"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
+        android:layout_marginLeft="300dp"
+        android:layout_marginTop="20dp"
+        android:scaleType="centerInside"
+        android:src="@drawable/search" />
+
+    <ImageButton
+        android:id="@+id/imgNotification"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
+        android:layout_marginLeft="345dp"
+        android:layout_marginTop="20dp"
+        android:scaleType="centerInside"
+        android:src="@drawable/notification" />
+
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/viewPager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="hom user" />
+        android:layout_marginTop="140dp"
+        >
+
+    </androidx.viewpager2.widget.ViewPager2>
+    <com.google.android.material.tabs.TabLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="90dp"
+        android:background="#FFFFFF"
+        android:id="@+id/tabLayout"
+        >
+    </com.google.android.material.tabs.TabLayout>
+
+
+
 
 </FrameLayout>
